Fixed layout problem

--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ p{font-weight: bold;
 	margin: 0 auto;
 }
 
+
+
 .hero-banner{
 	background-color: #007FFF;
 	min-height: 100vh;
@@ -128,18 +130,18 @@ nav{
 	box-shadow: 0 5px 8px rgba(0, 0, 0, .2);
 	position: sticky;
 	top: 0;
-	z-index: 1;
+	z-index: 2;
 
 }
 nav .logo{
 	display: block;
-    width: 170px;
-    height: 60px;
-    position: absolute;
-    top: 45%;
-    left: 0;
-    margin-top: -23px;
-    margin-left: 30px;
+	width: 170px;
+	height: 60px;
+	position: absolute;
+	top: 45%;
+	left: 0;
+	margin-top: -23px;
+	margin-left: 30px;
 	background: url(img/logo.png) no-repeat 0 0;
 	background-size: 100%;
 	overflow: hidden;
@@ -190,18 +192,18 @@ nav ul li a{
 	font-weight: 800;
 }
 
-.story h3{
-	font-size: 40px;
-	font-weight: 800;
-}
-
 .sep{
 	width: 470px;
 	height: 10px;
 	background-color: black;
 	margin: 70px auto;
-
 }
+
+.story h3{
+	font-size: 35px;
+	font-weight: 800;
+}
+
 .nb-list{
 	width: 470px;
 	padding: 20px 20px 0 20px;
@@ -210,6 +212,7 @@ nav ul li a{
 	float: left;
 	margin: 0 20px 20px 0 ;
 	position: relative;
+	z-index: 1;
 }
 
 .nb-list li{
@@ -236,9 +239,9 @@ nav ul li a{
 
 .nb-list li.dragging{
 	position: absolute;
-    top: 90px;
-    left: 20px;
-    right: 20px;
+   top: 90px;
+   left: 20px;
+   right: 20px;
 	transform: rotate(6deg);
 	box-shadow: 0 2px 14px rgba(0, 0, 0, .3);
 }
@@ -258,7 +261,8 @@ nav ul li a{
 
 .gang-img{
 	display: block;
- 	margin: 0 auto;}
+ 	margin: 0 auto;
+ }
 
  footer{
 	color:  rgba(0, 0, 0, .4);
@@ -278,7 +282,7 @@ footer a{
 	bottom: 0;
 	right: 0;
 	left: 0;
-	z-index: 2;
+	z-index: 3;
 }
 
 .popup.show{
@@ -371,7 +375,10 @@ footer a{
 
 }
 
-
+.gang-img {
+    display: block;
+    margin: 0 auto;
+    height: 350px;
 
 
 
